# TaskPrioritizationAlgorithm

./: Citation.cff  DATA_INPUT_INSTRUCTIONS.md  Modified_VIKOR_Proof  Modified_VIKOR_Proof.md  README.md  Search&Rescue_with_input_options  robot_criteria (2).xlsx
.github/workflows/: xlsx_to_csv.yml  xlsx_to_html.yml
Data/: ReadMe.md
Gazebo_Installation/: allocator_node.py
Gazebo_Installation/AHTOVIK/: allocator_node.py  package.xml  setup.py  user.tar
Gazebo_Installation/AHTOVIK/robot_allocator/: package.xml  setup.cfg  setup.py
Gazebo_Installation/AHTOVIK/robot_allocator/data/: criteria_comparison.xlsx  robots.xlsx  tasks.xlsx
Gazebo_Installation/AHTOVIK/robot_allocator/launch/: dynamic_launch.py  spawn_allocator.launch.py
Gazebo_Installation/AHTOVIK/robot_allocator/robot_allocator/: allocator_node.py
Gazebo_Installation/AHTOVIK/robot_allocator/urdf/: drone.urdf.xacro  ground_robot.urdf.xacro  snakebot.urdf.xacro
Gazebo_Installation/AHTOVIK/robot_allocator/worlds/: dynamic_arena.world
Gazebo_Installation/With_AEB/: README_AHTOVIK_MOTION_DEMO.md  ahtovik_motion_demo.py  setup.cfg  setup.py
Google_Colab_Installation/: Criteria Comparison.csv  DATA_INPUT_INSTRUCTIONS.md  ReadMe.md  Robots.csv  Search&Rescue_with_input_options  Tasks.csv  robot_criteria_populated.xlsx
Implementation with asynchronous event bus/: ReadMe.md  implementation  simulation.html
RSSR/: MAS_README.md  Mission_Continuity_Validation  Mission_Continuity_for_MAS.md  README.md
Validation_Suite/: paper_baseline_summary_mean_std.csv  recovery_time_summary.csv  recovery_times_raw.csv  summary_table.csv  trial_final_rows.csv
Validation_Suite/CBBA_VAlidation/: ahtovik_vs_cbba_noise_run_100_events.csv  ahtovik_vs_cbba_noise_run_100_metrics.csv  ahtovik_vs_cbba_noise_run_101_events.csv  ahtovik_vs_cbba_noise_run_101_metrics.csv  ahtovik_vs_cbba_noise_run_102_events.csv  ahtovik_vs_cbba_noise_run_102_metrics.csv  ahtovik_vs_cbba_noise_run_103_events.csv  ahtovik_vs_cbba_noise_run_103_metrics.csv  ahtovik_vs_cbba_noise_run_104_events.csv  ahtovik_vs_cbba_noise_run_104_metrics.csv  ahtovik_vs_cbba_noise_run_105_events.csv  ahtovik_vs_cbba_noise_run_105_metrics.csv  ahtovik_vs_cbba_noise_run_106_events.csv  ahtovik_vs_cbba_noise_run_106_metrics.csv  (+706 more)
Validation_Suite/ros2_ws/src/ahtovik_gazebo/install/ahtovik_gazebo/share/ahtovik_gazebo/: package.bash  package.dsv  package.sh  package.xml
Validation_Suite/ros2_ws/src/ahtovik_gazebo/install/ahtovik_gazebo/share/ahtovik_gazebo/models/uav/: model.config
Validation_Suite/ros2_ws/src/ahtovik_gazebo/install/ahtovik_gazebo/share/ahtovik_gazebo/worlds/: sar_world.sdf
Verification/: Empirical_Validation.ipynb  Fault-rate sweep.csv  Formalization  deadlock_rate.csv
(+39 files in other folders)
