<?xml version="1.0"?>
<package format="3">
  <name>AHTOVIK</name>
  <version>0.0.1</version>
  <description>Heterogeneous Multi-Robot Task Allocation integrated with Gazebo.</description>

  <!-- Maintainer info -->
  <maintainer email="sanjaliasn@gmail.com">AHTOVIK</maintainer>

  <!-- License -->
  <license>Apache-2.0</license>

  <!-- Build dependencies (needed at compile-time) -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>

  <!-- Python libraries you use -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-openpyxl</exec_depend>

  <!-- Testing (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
