<?xml version="1.0"?>
<package format="3">
  <name>ahtovik_gazebo</name>
  <version>0.0.1</version>
  <description>AhToVik ROS 2 demo for heterogeneous task allocation in Gazebo</description>
  <maintainer email="sanjaliasn@gmail.com">Anjali Santhosh</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
